# ConvertIT

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap-dev.ps1  convert-shell.ps1  convert-shell.vbs  fetch-tools.ps1  install-shell.ps1  install.cmd  install.ps1  package-nogui.ps1  package-release.ps1  smoke-test.ps1  uninstall-shell.ps1  uninstall.cmd  update.ps1
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  conversion.rs  lib.rs  main.rs  models.rs  presets.rs  settings.rs  shell.rs
src-tauri/windows/: installer-hooks.nsh
