[package]
name = "convertit"
version = "0.1.0"
description = "ConvertIT desktop app"
authors = ["ConvertIT contributors"]
edition = "2021"

[lib]
name = "convertit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5.3.2"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"