[package]
name = "convertit"
version = "0.1.1"
description = "ConvertIT CLI converter"
authors = ["ConvertIT contributors"]
edition = "2021"

[lib]
name = "convertit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
open = "5.3.2"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
